<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lost &amp; Found</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Lost &amp; Found</string>
    <string name="app_subtitle">busca • encuentra • reporta</string>
    <string name="app_registrer">Registrarme</string>
    <string name="app_newpass">Recuperar contraseña</string>
    <string name="title_activity_main">Lost &amp; Found</string>
    <string name="report">Report</string>
    <string name="report_home">Busca Hogar</string>
    <string name="userPic">User Pic</string>
    <string name="userName">Asukita Pam</string>
    <string name="userMsg">Acabo de ver un perrito abandonado cerca de la estación de Xochimilco&#8230;</string>
    <string name="userMsgLarge">Acabo de ver un perrito abandonado cerca de la estación de Xochimilco, cada vez que paso lo veo comiendo basura, está lastimado. No veo que tenga dueño. Ojalá que alguien pueda hacerse cargo de él!</string>
    <string name="postTime">hace 2 horas</string>
    <string name="leerMas">Leer más</string>
    <string name="alertDisable">Desactivar Alerta</string> 
    <string name="share">Compartir</string>
    <string name="pinIt">Marcar</string>
    <string name="checked">Atendido o Resuelto</string>
    <string name="numComnts">233</string>
    <string name="edit">Editar</string>
    <string name="takePicture">Tomar Foto</string>
    <string name="alertsMenu">Alertas</string>
    <string name="report_resolve">- ¡Resuelto!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail_pics">DetailPicsActivity</string>

</resources>
