<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollmain1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/linearmain1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:id="@+id/relativemain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/corner_roundwhite"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="8dp" >

            <ImageView
                android:id="@+id/imagevmain1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/report"
                android:maxHeight="215dp"
                android:adjustViewBounds="true"
                android:onClick="goToDetailPics"
                android:scaleType="centerInside"
                android:src="@drawable/finding_home" >

            </ImageView>

            <LinearLayout
                android:id="@+id/linearmain2"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imagevmain1"
                android:background="#FFD400"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imagevmain2"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/report"
                    android:src="@drawable/home_ico" />

                <TextView
                    android:id="@+id/textActivityTitleMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="open-sans"
                    android:text="@string/report_home"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textActivityTitleResolveMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="open-sans"
                    android:text="@string/report_resolve"
                    android:textColor="#63C2D0"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagevmain3"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_alignRight="@+id/linearmain2"
                android:layout_alignTop="@+id/linearmain2"
                android:layout_margin="3dp"
                android:contentDescription="@string/report"
                android:src="@drawable/home_ico" />

            <LinearLayout
                android:id="@+id/linearmain3"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearmain2"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageUsermain"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/userPic"
                    android:src="@drawable/user" />

                <LinearLayout
                    android:id="@+id/linearmain4"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textActivityUserNameMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="open-sans"
                        android:text="@string/userName"
                        android:textColor="#656565"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:background="#00000000"
                        android:ems="10"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="open-sans"
                        android:inputType="textMultiLine"
                        android:text="@string/userMsg"
                        android:textColor="#656565"
                        android:textSize="12sp" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textActivityTimeMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/linearmain3"
                android:layout_alignTop="@+id/linearmain3"
                android:layout_marginRight="9dp"
                android:layout_marginTop="10dp"
                android:fontFamily="open-sans"
                android:text="@string/postTime"
                android:textColor="#B71C4E"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textMore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearmain3"
                android:layout_alignRight="@+id/linearmain3"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="9dp"
                android:fontFamily="open-sans"
                android:text="@string/leerMas"
                android:textColor="#63C2D0"
                android:textSize="12sp" />

            <TableRow
                android:id="@+id/rowMain"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_below="@+id/linearmain3"
                android:background="@drawable/bottom_corner_round_gray"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TableRow
                    android:id="@+id/alertRowMain"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imagemainAlert1"
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/report"
                        android:src="@drawable/alert_active" />

                    <TextView
                        android:id="@+id/textAlert1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="open-sans"
                        android:text="@string/alertDisable"
                        android:textColor="#656565"
                        android:textSize="11sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/shareRowMain"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imagemainShare1"
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/report"
                        android:src="@drawable/alert_active" />

                    <TextView
                        android:id="@+id/textShare1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="open-sans"
                        android:text="@string/share"
                        android:textColor="#656565"
                        android:textSize="11sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/commentsRowMain"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imagemainComnts1"
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/report"
                        android:src="@drawable/alert_active" />

                    <TextView
                        android:id="@+id/textComnts1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="open-sans"
                        android:text="@string/numComnts"
                        android:textColor="#656565"
                        android:textSize="11sp" />
                </TableRow>
            </TableRow>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>